[tool.poetry]
name = "connact_auth"
version = "0.1.0"
description = ""
authors = ["Felix Breuer <fbreuer@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
bcrypt = "^4.0.0"
Radicale = "^3.1.8"
pymongo = {extras = ["srv"], version = "^4.2.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
