[tool.poetry]
name = "connact_storage"
version = "0.1.0"
description = ""
authors = ["Felix Breuer <fbreuer@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
Radicale = "^3.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
